5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1706_3057.log
== TEST (2019-04-29 19:07:31) 
-- CODE:
tempo = float(input("quanto tempo durou? "))
valor = tempo * custo + piloto
if((tempo >= 0) and (tempo <= 100)):
	valor = tempo * 80.00 + 3000.00
elif((tempo > 100) and ( tempo <= 200)):
	valor = tempo * 90.00 + 4000.00
elif((tempo > 200) and (tempo <= 300)):
	valor = tempo * 100.00 + 5000.00
elif((tempo > 300)):
	valor = tempo * 110 + 6000.00
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = tempo * custo + piloto
NameError: name 'custo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:07:59) 
-- CODE:
tempo = float(input("quanto tempo durou? "))
if((tempo >= 0) and (tempo <= 100)):
	valor = tempo * 80.00 + 3000.00
elif((tempo > 100) and ( tempo <= 200)):
	valor = tempo * 90.00 + 4000.00
elif((tempo > 200) and (tempo <= 300)):
	valor = tempo * 100.00 + 5000.00
elif((tempo > 300)):
	valor = tempo * 110 + 6000.00
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = tempo * custo + piloto
NameError: name 'custo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:08:51) 
-- CODE:
tempo = float(input("quanto tempo durou? "))
if((tempo >= 0) and (tempo <= 100)):
	valor = tempo * 80.00 + 3000.00
	print(round(valor, 2))
elif((tempo > 100) and ( tempo <= 200)):
	valor = tempo * 90.00 + 4000.00
elif((tempo > 200) and (tempo <= 300)):
	valor = tempo * 100.00 + 5000.00
elif((tempo > 300)):
	valor = tempo * 110 + 6000.00
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = tempo * custo + piloto
NameError: name 'custo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:09:43) 
-- CODE:
tempo = float(input("quanto tempo durou? "))
if((tempo >= 0) and (tempo <= 100)):
	valor = tempo * 80.00 + 3000.00
	print(round(valor, 2))
elif((tempo > 100) and ( tempo <= 200)):
	valor = tempo * 90.00 + 4000.00
	print(round(valor, 2))
elif((tempo > 200) and (tempo <= 300)):
	valor = tempo * 100.00 + 5000.00
	print(round(valor, 2))
elif((tempo > 300)):
	valor = tempo * 110 + 6000.00
	print(round(valor, 2))
-- OUTPUT:
14800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:09:51) 
-- CODE:
tempo = float(input("quanto tempo durou? "))
if((tempo >= 0) and (tempo <= 100)):
	valor = tempo * 80.00 + 3000.00
	print(round(valor, 2))
elif((tempo > 100) and ( tempo <= 200)):
	valor = tempo * 90.00 + 4000.00
	print(round(valor, 2))
elif((tempo > 200) and (tempo <= 300)):
	valor = tempo * 100.00 + 5000.00
	print(round(valor, 2))
elif((tempo > 300)):
	valor = tempo * 110 + 6000.00
	print(round(valor, 2))
-- EXECUTION TIME:
0.209509
-- TEST CASE 1:
---- input:
120
---- correct output:
14800.0
---- user output:
14800.0
-- TEST CASE 2:
---- input:
1
---- correct output:
3080.0
---- user output:
3080.0
-- TEST CASE 3:
---- input:
852
---- correct output:
99720.0
---- user output:
99720.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
